--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-    </div>
+    <div class="container"></div>
 </body>
 <script src="script.js"></script>
 </html>
