add gridsize modifier

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="controls"></div>
+    <button class="gridSize">Change Grid Size</button>
+    <div class="gridContainer"></div>
 </body>
 <script src="script.js"></script>
 </html>
